# python-autism-detection-api

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: main.py
