[project]
name = "autism-detection-api"
version = "1.0.0"
description = "API for autism detection using deep learning model"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "torch==2.1.0",
    "torchvision==0.16.0",
    "timm==0.9.8",
    "safetensors==0.4.0",
    "pillow==0.0.1",
    "python-multipart==0.0.6",
    "pydantic==2.4.2",
    "python-dotenv>=1.0.0",
    "numpy<2",
]